frontend/test/should_fail/computations_decl_use_calls_type_mismatch_proc_005.grg
using model_init;

proc(var i:int) : (int)
{
	return(i);
}

rule r
{
	modify {
		eval {
			def var d:double = 3.141592654;
			(d) = proc(d);
		}
	}
}

